<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp">

    <LinearLayout
        android:id="@+id/item_prediction_img_main"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_commercial"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_prediction_txt_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_prediction_txt_month"
            android:textColor="@color/text_T1_darkMode"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/item_prediction_txt_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_prediction_txt_day"
            android:textColor="@color/text_T1_darkMode"
            android:textSize="16dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_prediction_txt_disease"
        style="@style/subTitle_1_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_prediction_txt_disease"
        app:layout_constraintStart_toEndOf="@+id/item_prediction_img_main"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_prediction_txt_status"
        style="@style/subTitle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/item_prediction_txt_status"
        app:layout_constraintStart_toEndOf="@+id/item_prediction_img_main"
        app:layout_constraintTop_toBottomOf="@+id/item_prediction_txt_disease" />

</androidx.constraintlayout.widget.ConstraintLayout>