<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    tools:context=".AccountInfo">

    <ImageView
        android:id="@+id/account_info_img_background"
        android:layout_width="281dp"
        android:layout_height="181dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/doctor_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_info_txt_title"
        style="@style/heading_3_bold_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/account_info_txt_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="343dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/account_info_btn_edit_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_info_txt_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/account_info_txt_title_name"
            style="@style/subTitle_1_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/account_txt_title_name" />

        <EditText
            android:id="@+id/account_info_edit_txt_name"
            style="@style/subTitle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/account_info_txt_title_gender"
            style="@style/subTitle_1_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/account_txt_title_gender" />

        <Spinner
            android:id="@+id/account_info_spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/account_info_txt_title_phone"
            style="@style/subTitle_1_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_txt_title_phone" />

        <EditText
            android:id="@+id/account_info_edit_txt_phone"
            style="@style/subTitle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="" />

        <TextView
            android:id="@+id/account_info_txt_title_email"
            style="@style/subTitle_1_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/account_txt_title_email" />

        <EditText
            android:id="@+id/account_info_edit_txt_email"
            style="@style/subTitle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="" />

        <TextView
            android:id="@+id/account_info_txt_title_address"
            style="@style/subTitle_1_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/account_txt_title_address" />

        <EditText
            android:id="@+id/account_info_edit_txt_address"
            style="@style/subTitle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_info_btn_edit_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/theme_1_P"
        android:text="@string/account_info_btn_done"
        android:textColor="@color/background_B1_lightMode"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>